Bug 165980 - Libreoffice built with "--with-help" crashes when launching help
Summary: Libreoffice built with "--with-help" crashes when launching help
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
25.2.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords:
: 166367 166441 166615 166722 166815 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-31 07:01 UTC by Pierre Labastie
Modified: 2025-06-01 18:37 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre Labastie 2025-03-31 07:01:59 UTC
Description:
Crash occurs if either hitting "F1", or selecting "Help->Libreoffice Help", or from the command line "/path/to/soffice --helpwriter".
I haven't tried to reset my user profile, but it happens to everybody using Linux from scratch...
Note that we haven't tested with versions other than 25.2.xx

Steps to Reproduce:
1.After patching for icu-76, build libreoffice with ./autogen.sh --prefix=$LO_PREFIX         \
             --sysconfdir=/etc           \
             --with-vendor=BLFS          \
             --with-lang='fr en-GB'      \
             --with-help                 \
             --with-myspell-dicts        \
             --without-junit             \
             --without-system-dicts      \
             --disable-dconf             \
             --disable-odk               \
             --disable-mariadb-sdbc      \
             --enable-release-build=yes  \
             --enable-python=system      \
             --with-jdk-home=/opt/jdk    \
             --with-system-boost         \
             --with-system-clucene       \
             --with-system-curl          \
             --with-system-epoxy         \
             --with-system-expat         \
             --with-system-glm           \
             --with-system-gpgmepp       \
             --with-system-graphite      \
             --with-system-harfbuzz      \
             --with-system-jpeg          \
             --with-system-lcms2         \
             --with-system-libatomic_ops \
             --with-system-libpng        \
             --with-system-libxml        \
             --with-system-nss           \
             --with-system-odbc          \
             --with-system-openldap      \
             --with-system-openssl       \
             --with-system-poppler       \
             --with-system-postgresql    \
             --with-system-redland       \
             --with-system-libtiff       \
             --with-system-libwebp       \
             --with-system-icu           \
             --with-system-zlib
2. make build; make distro-pack-install
3. run soffice; hit "F1" (for example)

Actual Results:
The libreoffice window disappear, and the program is crashed. Note that if the --with-debug option is added to the above, there is:
assertion mpByteReader failed, but if built without this option, the program just crashes with a SIGSEGV...

Expected Results:
The documentation appears


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.1.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 16; OS: Linux 6.13; UI render: default; VCL: gtk3
Locale: en-US (C.UTF-8); UI: en-US
Calc: threaded
Comment 1 Pierre Labastie 2025-03-31 07:04:43 UTC
Forgot to say: Building with "--with-help=html" gives the normal behavior.
Comment 2 Olivier Hallot 2025-04-16 22:51:25 UTC
No crash but help page is not the good one.
Comment 3 Mattia 2025-04-17 16:48:08 UTC
This also started to happen in Fedora with LO 25.2.x.

We also build with plain '--with-help'. A backtrace of the crash is available at https://bugzilla.redhat.com/show_bug.cgi?id=2337266 if it helps...
Comment 4 Mattia 2025-04-17 17:07:45 UTC
A better stack trace is at https://bugzilla.redhat.com/show_bug.cgi?id=2360760
Comment 5 BogdanB 2025-04-29 04:59:44 UTC
*** Bug 166367 has been marked as a duplicate of this bug. ***
Comment 6 BogdanB 2025-04-29 05:00:33 UTC
Bug 166367 has a backtrace of this bug also
Comment 7 Julien Nabet 2025-04-29 20:03:42 UTC
I forgot to tell I've submitted a patch for review here:
https://gerrit.libreoffice.org/c/core/+/184732
Comment 8 Commit Notification 2025-04-30 11:41:09 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/871dc7bce19242e467d98a02108a8eb8668f2ea1

tdf#165980: fix crash when launching help with "--with-help"

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-04-30 13:41:23 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13a3a28969d45f12c552e2d2968c03373cb2a063

Related tdf#165980: now cxxhelp/provider/inputstream is useless, get rid of it

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Ashley Paul 2025-05-03 10:38:00 UTC
*** Bug 166441 has been marked as a duplicate of this bug. ***
Comment 11 Julien Nabet 2025-05-03 12:24:20 UTC
Cherry-pick waiting for review here:
https://gerrit.libreoffice.org/c/core/+/184825

In the meanwhile, let's put this one to FIXED.
Comment 12 Commit Notification 2025-05-14 19:19:34 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/df0cf3e6ef5ef2d5d10e100606c12369362ec950

tdf#165980: fix crash when launching help with "--with-help"

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Julien Nabet 2025-05-18 13:30:28 UTC
*** Bug 166615 has been marked as a duplicate of this bug. ***
Comment 14 Cutter 2025-05-26 10:45:08 UTC
*** Bug 166722 has been marked as a duplicate of this bug. ***
Comment 15 Julien Nabet 2025-06-01 18:37:01 UTC
*** Bug 166815 has been marked as a duplicate of this bug. ***